--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <header>
                     <nav>
                         <ul>
-                            <li><a href="home.html">home</a></li>
+                            <li><a href="index.html">home</a></li>
                             <li><a href="about.html">about</a></li>
                             <li><a href="contact.html">contact</a></li>
                            <li><p class='goodbye ' style="font-size:25px; " >Terence Minerbrook's Website</p></li>
