--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8">
         <title>home</title>
 
-        <link rel="stylesheet" href="/home/ladyofspain/Desktop/Bucket/Computer Lab/FullStack/Class/Projects/ProjectOne/style.css">
+        <link rel="stylesheet" href="/ProjectOne/style.css">
 
         <style>
             
