--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>about</title>
 
 
-        <link rel="stylesheet" href="ProjectOne/style.css">
+        <link rel="stylesheet" href="style.css">
         <style>
             @import url('https://fonts.googleapis.com/css?family=Lobster|Roboto&display=swap');
 
