second mk2 commit

--- a/about.html
+++ b/about.html
@@ -128,7 +128,20 @@
 
 <body>
     <h1>Terence Minerbrook</h1>
-    <div class="section group">
+    <div class="section group" style="">
+        <div class="col span_6_of_8">
+            6 of 8
+        </div>
+        <div class="col span_2_of_8">
+             2 of 8
+        </div>
+        <div class="col span_8_of_8">
+            7 of 8
+        </div>
+    </div>
+
+        
+        <!--
         <div class="col span_1_of_8">
             1 of 8
         </div>
@@ -144,19 +157,12 @@
         <div class="col span_1_of_8">
             1 of 8
         </div>
-        <div class="col span_1_of_8">
-            1 of 8
-        </div>
-        <div class="col span_1_of_8">
-            1 of 8
-        </div>
-        <div class="col span_1_of_8">
-            1 of 8
-        </div>
+-->
     </div>
 
 
     <footer>
+       
         <div>
             <div class="col span_8_of_8">
                 1 of 8
